crates/edifact-rs-derive/tests/ui/fail_qualifier_from_invalid_format.stderr
error: expected integer literal
  --> tests/ui/fail_qualifier_from_invalid_format.rs:15:45
   |
15 | #[edifact(segment = "RFF", qualifier_from = "0")]
   |                                             ^^^
